--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Auto Scrap</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <nav>
+                <div class="logo">AutoScrap</div>
+                <ul class="navLinks">
+                    <li><a href="" class="navLink">Home</a></li>
+                    <li><a href="" class="navLink">About</a></li>
+                    <li><a href="" class="navLink">Contact</a></li>
+                </ul>
+            </nav>
+            <section class="hero">
+                <div class="hero__texts">
+                    <h1 class="hero__text-main">Scrap for Cash</h1>
+                    <p class="hero__text-secondary">We collect your damaged or accidented cars that, you dont need, and give you cash. Its that simple.</p>
+                    <a href="" class="signup__button">Sign up</a>
+                </div>
+                <img src="" alt="hero image" class="hero__img">
+            </section>
+        </div>
+    </header>
 </body>
 </html>
