--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p class="hero__text-secondary">We collect your damaged or accidented cars that, you dont need, and give you cash. Its that simple.</p>
                     <a href="" class="signup__button">Sign up</a>
                 </div>
-                <img src="" alt="hero image" class="hero__img">
+                <img src="/images/car1.jpg" alt="hero image" class="hero__img">
             </section>
         </div>
     </header>
