--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Scrap</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <nav>
+            <nav class="topNav">
                 <div class="logo">AutoScrap</div>
                 <ul class="navLinks">
-                    <li><a href="" class="navLink">Home</a></li>
-                    <li><a href="" class="navLink">About</a></li>
-                    <li><a href="" class="navLink">Contact</a></li>
+                    <li class="navling"><a href="" class="navLink">Home</a></li>
+                    <li class="navling"><a href="" class="navLink">About</a></li>
+                    <li class="navling"><a href="" class="navLink">Contact</a></li>
                 </ul>
             </nav>
             <section class="hero">
