--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <nav class="topNav">
                 <div class="logo">AutoScrap</div>
                 <ul class="navLinks">
-                    <li class="navling"><a href="" class="navLink">Home</a></li>
-                    <li class="navling"><a href="" class="navLink">About</a></li>
-                    <li class="navling"><a href="" class="navLink">Contact</a></li>
+                    <li class="navling"><a href="#" class="navLink">Home</a></li>
+                    <li class="navling"><a href="#" class="navLink">About</a></li>
+                    <li class="navling"><a href="#" class="navLink">Contact</a></li>
                 </ul>
             </nav>
             <section class="hero">
                 <div class="hero__texts">
                     <h1 class="hero__text-main">Scrap for Cash</h1>
                     <p class="hero__text-secondary">We collect your damaged or accidented cars that, you dont need, and give you cash. Its that simple.</p>
-                    <a href="" class="signup__button">Sign up</a>
+                    <a href="#" class="sigup--btn">Sign up</a>
                 </div>
                 <img src="/images/car1.jpg" alt="hero image" class="hero__img">
             </section>
