--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Auto Scrap</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <nav class="topNav">
-                <div class="logo">AutoScrap</div>
-                <ul class="navLinks">
-                    <li class="navling"><a href="#" class="navLink">Home</a></li>
-                    <li class="navling"><a href="#" class="navLink">About</a></li>
-                    <li class="navling"><a href="#" class="navLink">Contact</a></li>
-                </ul>
-            </nav>
-            <section class="hero">
-                <div class="hero__texts">
-                    <h1 class="hero__text-main">Scrap for Cash</h1>
-                    <p class="hero__text-secondary">We collect your damaged or accidented cars that, you dont need, and give you cash. Its that simple.</p>
-                    <a href="#" class="sigup--btn">Sign up</a>
-                </div>
-                <img src="/images/car1.jpg" alt="hero image" class="hero__img">
-            </section>
-        </div>
+      <div class="container">
+        <nav class="topNav">
+          <div class="logo">AutoScrap</div>
+          <ul class="navLinks">
+            <li class="navling"><a href="#" class="navLink">Home</a></li>
+            <li class="navling"><a href="#" class="navLink">About</a></li>
+            <li class="navling"><a href="#" class="navLink">Contact</a></li>
+          </ul>
+        </nav>
+        <section class="hero">
+          <div class="hero__texts">
+            <h1 class="hero__text-main">Scrap for <br> Cash</h1>
+            <p class="hero__text-secondary">
+              We collect your damaged or accidented cars that, you dont need,
+              and give you cash. Its that simple.
+            </p>
+            <a href="#" class="signup--btn">Sign up</a>
+          </div>
+          <img src="./images/car1.jpg" alt="hero image" class="hero__img" />
+        </section>
+      </div>
     </header>
-</body>
+    <section class="about">
+        <h1 class="abt--main-txt">Vehicles We Deal With.</h1>
+        
+    </section>
+  </body>
 </html>
