Add about section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Auto Scrap</title>
 
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
     <header>
@@ -39,8 +40,26 @@
         </section>
       </div>
     </header>
-    <section class="about">
+    <section class="about container">
         <h1 class="abt--main-txt">Vehicles We Deal With.</h1>
+       <div class="deals">
+         <div class="gallery">
+          <img src="./images/bike.jpg" alt="bike">
+          <p class="desc">we collect bikes.</p>
+        </div>
+        <div class="gallery">
+          <img src="./images/car1.jpg" alt="car">
+          <p class="desc">we collect cars.</p>
+        </div>
+        <div class="gallery">
+          <img src="./images/suv.jpg" alt="suv">
+          <p class="desc">we collect suv's.</p>
+        </div>
+        <div class="gallery">
+          <img src="./images/truck.jpg" alt="trucks">
+          <p class="desc">we collect trucks.</p>
+        </div>
+       </div>
         
     </section>
   </body>
