Add testimonial section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
       </div>
     </header>
-    <section class="about container">
+    <section class="about container2">
         <h1 class="abt--main-txt">Vehicles We Deal With.</h1>
        <div class="deals">
          <div class="gallery">
@@ -60,7 +60,13 @@
           <p class="desc">we collect trucks.</p>
         </div>
        </div>
-        
     </section>
+    <div class="cb">
+          <section class="testimonials cb container2">
+      <p class="testimony">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <p class="test--name">-Kratos, the God of War</p>
+    </section>
+    </div>
+
   </body>
 </html>
