--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-
-    
   </head>
   <body>
     <header>
@@ -29,7 +27,10 @@
         </nav>
         <section class="hero">
           <div class="hero__texts">
-            <h1 class="hero__text-main">Scrap for <br> Cash</h1>
+            <h1 class="hero__text-main">
+              Scrap for <br />
+              Cash
+            </h1>
             <p class="hero__text-secondary">
               We collect your damaged or accidented cars that, you dont need,
               and give you cash. Its that simple.
@@ -41,32 +42,49 @@
       </div>
     </header>
     <section class="about container2">
-        <h1 class="abt--main-txt">Vehicles We Deal With.</h1>
-       <div class="deals">
-         <div class="gallery">
-          <img src="./images/bike.jpg" alt="bike">
+      <h1 class="abt--main-txt">Vehicles We Deal With.</h1>
+      <div class="deals">
+        <div class="gallery">
+          <img src="./images/bike.jpg" alt="bike" />
           <p class="desc">we collect bikes.</p>
         </div>
         <div class="gallery">
-          <img src="./images/car1.jpg" alt="car">
+          <img src="./images/car1.jpg" alt="car" />
           <p class="desc">we collect cars.</p>
         </div>
         <div class="gallery">
-          <img src="./images/suv.jpg" alt="suv">
+          <img src="./images/suv.jpg" alt="suv" />
           <p class="desc">we collect suv's.</p>
         </div>
         <div class="gallery">
-          <img src="./images/truck.jpg" alt="trucks">
+          <img src="./images/truck.jpg" alt="trucks" />
           <p class="desc">we collect trucks.</p>
         </div>
-       </div>
+      </div>
     </section>
     <div class="cb">
-          <section class="testimonials cb container2">
-      <p class="testimony">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-      <p class="test--name">-Kratos, the God of War</p>
-    </section>
+      <section class="testimonials cb container2">
+        <p class="testimony">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book.
+        </p>
+        <p class="test--name">-Kratos, the God of War</p>
+      </section>
     </div>
-
+    <section class="cta">
+      <div class="cta--content container">
+      <div class="ctab">
+          <div class="cta--txt-box">
+          <h2 class="cta--txt-main">Call to action! It's time!</h2>
+          <p class="cta--txt-p">
+            Sign up for our servics by clicking the button over there!
+          </p>
+        </div>
+        <a href="#" class="cta--btn">Sign Up</a>
+      </div>
+      </div>
+    </section>
   </body>
 </html>
