--- a/index.html
+++ b/index.html
@@ -86,5 +86,8 @@
       </div>
       </div>
     </section>
+    <footer>
+      <p class="cp">Copyright &copy; Pa3ick</p>
+    </footer>
   </body>
 </html>
